--- a/OWO_ATF.csproj
+++ b/OWO_ATF.csproj
@@ -33,15 +33,18 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="0Harmony">
-      <HintPath>D:\Games\Oculus\Software\vertigo-games-snowbreed\BepInEx\core\0Harmony.dll</HintPath>
+      <HintPath>Libraries\0Harmony.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="BepInEx">
+      <HintPath>Libraries\BepInEx.dll</HintPath>
+    </Reference>
     <Reference Include="BepInEx.Core">
-      <HintPath>D:\Games\Oculus\Software\vertigo-games-snowbreed\BepInEx\core\BepInEx.Core.dll</HintPath>
+      <HintPath>Libraries\BepInEx.Core.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="BepInEx.IL2CPP">
-      <HintPath>D:\Games\Oculus\Software\vertigo-games-snowbreed\BepInEx\core\BepInEx.IL2CPP.dll</HintPath>
+      <HintPath>Libraries\BepInEx.IL2CPP.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="Bhaptics.Tact">
@@ -71,7 +74,7 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
     <Reference Include="UnhollowerBaseLib">
-      <HintPath>D:\GAMES\OCULUS\Software\vertigo-games-snowbreed\BepInEx\core\UnhollowerBaseLib.dll</HintPath>
+      <HintPath>Libraries\UnhollowerBaseLib.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="UnityEngine.CoreModule">
