fix: initialize log variable

--- a/OWO_ATF.csproj
+++ b/OWO_ATF.csproj
@@ -93,6 +93,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="OWOSensations.cs" />
     <Compile Include="OWO_AfterTheFall.cs" />
     <Compile Include="OWOSkin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
